src/main/default/objects/AccountSyncMapping__mdt/AccountSyncMapping__mdt.object-meta.xml
<CustomObject>
    <description>Custom metadata storing fields from account object which should be kept in sync between custom accounts and related DP accounts</description>
    <label>Account Sync Mapping</label>
    <pluralLabel>Account Sync Mappings</pluralLabel>
</CustomObject>