src/main/default/objects/AccountSyncMapping__mdt/fields/ConditionalField__c.field-meta.xml
<CustomField>
    <fullName>ConditionalField__c</fullName>
    <label>Conditional Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>