src/main/default/objects/AccountSyncMapping__mdt/fields/ConditionalValue__c.field-meta.xml
<CustomField>
    <fullName>ConditionalValue__c</fullName>
    <label>Conditional Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>