src/main/default/objects/AccountSyncMapping__mdt/fields/FieldDefaultValue__c.field-meta.xml
<CustomField>
    <fullName>FieldDefaultValue__c</fullName>
    <label>Field Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>