src/main/default/objects/AccountSyncMapping__mdt/listViews/AllMappings.listView-meta.xml
<ListView>
    <fullName>AllMappings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>FieldAPIName__c</columns>
    <columns>FieldDefaultValue__c</columns>
    <columns>ConditionalField__c</columns>
    <columns>ConditionalValue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Mappings</label>
    <language>en_US</language>
</ListView>